<resources>
    <string name="app_name">RGGoal</string>
    <string name="potential">Achieve your full potential</string>
    <string name="start">Get started</string>
    <string name="startlearn">Learn and improve skills</string>
    <string name="startschedule">Track your progress</string>
    <string name="startcalendar">Time to compete!</string>
    <string name="nameErr">Enter your name</string>
    <string name="birthyearErr">Enter your birthyear</string>
    <string name="startYearErr">Enter the year you started RG</string>
    <string name="menuHome">Home</string>
    <string name="menuSchedule">Schedule</string>
    <string name="menuProgress">Progress</string>
    <string name="calendar">Goals calendar</string>
    <string name="yourSchedule">Schedule your trainings</string>
    <string name="grafic">Progress chart</string>
    <string name="grafic2">Effort parameters evolution in macrocycle</string>
    <string name="home">Hi!</string>
    <string name="planzilnic">Your daily training plan is </string>
    <string name="planzilnic2">This is your daily training plan </string>
    <string name="zilibera">No training scheduled for today </string>
    <string name="welcome">"Welcome! Go schedule yout trainings and competitions!"</string>
    <string name="aici">HERE</string>
    <string name="hours1">1-4 hours</string>
    <string name="hours2">5-8 hours</string>
    <string name="hours3">9-12 hours</string>
    <string name="hours4">12+ hours</string>
    <string name="nume">Name</string>
    <string name="annastere">Birtyear</string>
    <string name="aninceput">Started RG in</string>
    <string name="nivel">Level </string>
    <string name="experienta">Experience</string>
    <string name="next">Next </string>
    <string name="submit">Submit </string>
    <string name="compErr">Enter competition name</string>
    <string name="noAppErr">Enter number of competition routines</string>
    <string name="navigation_drawer_close">Open</string>
    <string name="programe">My programs</string>
    <string name="intro">Let\'s set up your profile!</string>
    <string name="quiz">"Tell us about you and your RG history"</string>
    <string name="hours">How many training hours a week?</string>
    <string name="apparatus">Can you handle any RG apparatus?</string>
    <string name="compete">What level do you compete in?</string>
    <string name="days">Your current training days</string>
    <string name="month">Check your monthly calendar</string>
    <string name="competitions">Your following competitions</string>
    <string name="schedule">Create schedule</string>
    <string name="update">Update</string>
    <string name="programs">Here are some programs suggested for you</string>
    <string name="profilePic">Profile Pic</string>
    <string name="chooseProfile">Would you like to choose a profile pic?</string>
    <string name="exname">Exercises</string>
    <string name="exreps">No. Reps</string>
    <string name="exspecs">Specs</string>
    <string name="competition">Set up your competition</string>
    <string name="compName">Competition</string>
    <string name="compApp">No. routines</string>
    <string name="compDate">Pick your competition date</string>
    <string name="includeEx">Include the following exercises in your training Warmup</string>
    <string name="progEnroll">Enroll</string>
    <string name="progEnrolled">Enrolled</string>
    <string name="progAvailable">Available</string>
    <string name="progFinished">Finished</string>
    <string name="planDone">Done</string>
    <string name="lvlNext">Next</string>
    <string name="newCompetition">Enter your competitions and start your preparation!</string>
    <string name="progrWarning">Enroll program warning</string>
    <string name="progrCurrent">Already enrolled in this program</string>
    <string name="progrFinished">Already completed this program</string>
    <string name="progrNotAvailable">Already enrolled in one program</string>
    <string name="currentEnroll">"You're currently enrolled in:"</string>
    <string name="view">Understood</string>
    <string name="nextLevel">Completed level</string>
    <string name="completedProgram">Completed program</string>
    <string name="congratsLevel">"Congratulations! You've reached level: "</string>
    <string name="congratsProgram">"Congratulations! You've completed program: "</string>
    <string name="addProgram">Check suggested programs and start reaching your goals!</string>
    <string name="started">Preparation started at </string>
    <string name="completed">Goal completed at</string>
    <string name="willcomplete">Goal will be completed at</string>
    <string name="stillworking">Still working at your goal</string>
    <string name="doneTraining">Training completed</string>
    <string name="completeTraining">"You already completed today's training!"</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="monday">monday</string>
    <string name="tuesday">tuesday</string>
    <string name="wednesday">wednesday</string>
    <string name="thursday">thursday</string>
    <string name="friday">friday</string>
    <string name="saturday">saturday</string>
    <string name="sunday">sunday</string>
    <string name="intensity">Intensity: </string>
    <string name="volume">Volume: </string>
    <string name="techPrep">Technical: </string>
    <string name="trainingNotCompleted">Training not completed</string>
    <string name="trainingCompleted">Training completed</string>
    <string name="rescheduleTraining">You missed today\'s training! Make sure to reschedule it soon.</string>
    <string name="tryCategory">Check out new programs to improve </string>
    <string name="tryNext">NEXT: </string>
    <string name="tryPrograms">You\'re free to search any program to train qualities or learn elements!</string>
</resources>