<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Schedule.ScheduleFragment">

    <RelativeLayout
        android:id="@+id/layoutSchedule"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/wave_drawer">

    <TextView
        android:id="@+id/tvSchedule"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:text="@string/yourSchedule"
        android:textColor="@color/mediumPink"
        android:shadowColor="@color/darkgray"
        android:shadowDx="4"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:fontFamily="@font/caveatbrush_regular"/>

    <TextView
        android:id="@+id/tvCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month"
        android:layout_below="@id/tvSchedule"
        android:fontFamily="@font/bubblegum_sans"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"/>
    <ImageButton
        android:id="@+id/btnCalendar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/tvCalendar"
        android:layout_below="@id/tvSchedule"
        android:background="@drawable/bg_lightbink"
        android:src="@drawable/ic_baseline_calendar_month_24"
        />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutSchedule"
        android:fontFamily="@font/bubblegum_sans"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginVertical="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/days"
        />

    <LinearLayout
        android:id="@+id/layoutDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tvDays"
        android:weightSum="7">

    <TextView
        android:id="@+id/tvMon"
        android:text="@string/mon"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="70dp"
        android:paddingHorizontal="14dp"
        android:gravity="center"
        android:clickable="true"
        android:fontFamily="@font/caveatbrush_regular"
        android:layout_below="@id/tvDays"/>
<!--        android:clickable="true"-->
<!--        android:onClick="clickDay"-->

    <TextView
        android:id="@+id/tvTue"
        android:text="@string/tue"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="70dp"
        android:paddingHorizontal="14dp"
        android:gravity="center"
        android:clickable="true"
        android:fontFamily="@font/caveatbrush_regular"
        android:layout_below="@id/tvDays"
        android:layout_toRightOf="@+id/tvMon"/>
    <TextView
        android:id="@+id/tvWed"
        android:text="@string/wed"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="70dp"
        android:paddingHorizontal="15dp"
        android:gravity="center"
        android:clickable="true"
        android:layout_below="@id/tvDays"
        android:fontFamily="@font/caveatbrush_regular"
        android:layout_toRightOf="@+id/tvTue"/>
    <TextView
        android:id="@+id/tvThu"
        android:text="@string/thu"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="70dp"
        android:paddingHorizontal="15dp"
        android:gravity="center"
        android:clickable="true"
        android:layout_below="@id/tvDays"
        android:fontFamily="@font/caveatbrush_regular"
        android:layout_toRightOf="@+id/tvWed"/>
    <TextView
        android:id="@+id/tvFri"
        android:text="@string/fri"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="70dp"
        android:paddingHorizontal="14dp"
        android:gravity="center"
        android:clickable="true"
        android:layout_below="@id/tvDays"
        android:fontFamily="@font/caveatbrush_regular"
        android:layout_toRightOf="@+id/tvThu"/>
    <TextView
        android:id="@+id/tvSat"
        android:text="@string/sat"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="70dp"
        android:paddingHorizontal="15dp"
        android:gravity="center"
        android:clickable="true"
        android:layout_below="@id/tvDays"
        android:fontFamily="@font/caveatbrush_regular"
        android:layout_toRightOf="@+id/tvFri"/>
    <TextView
        android:id="@+id/tvSun"
        android:text="@string/sun"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="70dp"
        android:paddingHorizontal="14dp"
        android:gravity="center"
        android:clickable="true"
        android:layout_below="@id/tvDays"
        android:fontFamily="@font/caveatbrush_regular"
        android:layout_toRightOf="@+id/tvSat"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpdateDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/update"
        android:layout_below="@+id/layoutDays"
        android:layout_alignParentRight="true"
        android:background="@drawable/tv_rounded"
        android:drawableEnd="@drawable/ic_baseline_refresh_24"
        android:drawablePadding="3dp"
        android:textColor="@color/black"
        android:padding="7dp"
        />

    <TextView
        android:id="@+id/tvCompetition"
        android:layout_marginTop="42dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnUpdateDays"
        android:textSize="25dp"
        android:fontFamily="@font/bubblegum_sans"
        android:textStyle="bold"
        android:text="@string/competitions" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddCompet"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:clickable="true"
        android:layout_below="@+id/btnUpdateDays"
        android:backgroundTint="@color/lightPink"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:src="@drawable/ic_baseline_add_24"
        android:layout_toRightOf="@+id/tvCompetition"
        android:layout_marginLeft="15dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCompetition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAddCompet"
        android:layout_marginTop="15dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvNewCompetition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCompetition"
        android:layout_marginTop="15dp"
        android:textSize="17dp"
        android:text="@string/newCompetition"
        android:fontFamily="@font/bubblegum_sans"
        android:layout_centerHorizontal="true"
        android:textColor="@color/gray"
        android:shadowColor="@color/lightPink"
        android:shadowDx="4"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:textStyle="italic"
        android:visibility="gone"/>

</RelativeLayout>
</ScrollView>