<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartApp.StartActivity">
    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/gym_appicon"
        android:layout_marginLeft="50dp"/>

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/crafty_girls"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/tvPotential"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/potential"
        android:fontFamily="@font/bubblegum_sans"
        android:textSize="23dp"
        android:layout_below="@id/tvAppName"
        android:layout_marginTop="20dp"
        android:textColor="@color/lightPink"
        android:layout_centerHorizontal="true"
        android:shadowColor="#808080"
        android:shadowDx="4"
        android:shadowDy="1"
        android:shadowRadius="3" />


    <RelativeLayout
        android:id="@+id/layoutPresentation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPotential"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/imgGym"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="50dp"
            app:cardElevation="5dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:src="@drawable/gym_pres" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/imglearn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gym_flexibility"
            android:layout_toRightOf="@+id/imgGym"
            android:layout_marginVertical="15dp"
            android:padding="15dp"/>
        <TextView
            android:id="@+id/tvlearn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startlearn"
            android:layout_toRightOf="@+id/imglearn"
            android:textSize="10dp"
            android:layout_marginVertical="30dp"
            android:fontFamily="@font/fauna_one"/>

        <ImageView
            android:id="@+id/imgProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_area_chart_24"
            android:layout_below="@+id/tvlearn"
            android:layout_toRightOf="@+id/imgGym"
            android:layout_marginVertical="15dp"
            android:padding="15dp"/>
        <TextView
            android:id="@+id/tvProgres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startschedule"
            android:layout_toRightOf="@+id/imgProgress"
            android:textSize="10dp"
            android:fontFamily="@font/fauna_one"
            android:layout_below="@+id/tvlearn"
            android:layout_marginVertical="33dp"/>


        <ImageView
            android:id="@+id/imgCompete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_calendar_month_24"
            android:layout_toRightOf="@+id/imgGym"
            android:layout_below="@id/tvProgres"
            android:layout_marginVertical="10dp"
            android:padding="15dp"/>
        <TextView
            android:id="@+id/tvCompete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startcalendar"
            android:layout_toRightOf="@+id/imgCompete"
            android:textSize="10dp"
            android:fontFamily="@font/fauna_one"
            android:layout_below="@id/tvProgres"
            android:layout_marginVertical="33dp" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/layoutPresentation"
        android:background="@drawable/gradients"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="30dp">


<!--            <androidx.appcompat.widget.AppCompatButton-->
        <TextView
            android:id="@+id/btnStart"
            android:background="@drawable/bg_rounded"
            android:backgroundTint="@color/lightPink"
            android:fontFamily="@font/bubblegum_sans"
            android:text="@string/start"
            android:textColor="@color/darkgray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="20dp"
            />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</RelativeLayout>

</ScrollView>